--- a/project/package.json
+++ b/project/package.json
@@ -9,11 +9,13 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "html-react-parser": "^0.14.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-chat-widget": "^3.0.5",
     "react-chatbot-kit": "^1.0.6",
     "react-dom": "^16.13.1",
+    "react-jsx-parser": "^1.25.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-simple-chatbot": "^0.6.1",
