Added functions to read and write from mongodb

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,4 @@ export assistant_api_key = 'C44GUZhxnCUXX6wpjmUGiXnCflvjVEddL5RhB-3oyMdC'
 export assistant_url = 'https://api.us-south.assistant.watson.cloud.ibm.com/instances/c2ca38d7-2a52-46d4-b579-ac5db2e7cb0a'
 export assistant_version = '2020-08-31'
 export assistant_id = 'c026daa0-a6ed-4831-a712-c1f589caa1ad'
+export uri = 'mongodb+srv://user1:9OpZIbnA6BtBen37@pcbuilding.cndjn.mongodb.net/test?retryWrites=true&w=majority'
