--- a/backend/.env
+++ b/backend/.env
@@ -5,4 +5,5 @@ export assistant_id = 'c026daa0-a6ed-4831-a712-c1f589caa1ad'
 export uri = 'mongodb+srv://labweb-user:T7r9bpzxDwQwX2RR@cluster0.2jidk.mongodb.net/LabWeb?retryWrites=true&w=majority'
 export uri2 = 'mongodb+srv://user1:9OpZIbnA6BtBen37@pcbuilding.cndjn.mongodb.net/test?retryWrites=true&w=majority'
 export account_sid = 'AC560be1b212ded4a3c424d5b25a0377d8'
-export auth_token = '0af49065df9b8b8e1b205f8925082b63' 
+export auth_token = '0af49065df9b8b8e1b205f8925082b63'
+export session_id = '2b97d46c-31e1-4139-8e04-d839618c9a1f'
