--- a/backend/.env
+++ b/backend/.env
@@ -5,5 +5,6 @@ export assistant_id = 'c026daa0-a6ed-4831-a712-c1f589caa1ad'
 export uri = 'mongodb+srv://labweb-user:T7r9bpzxDwQwX2RR@cluster0.2jidk.mongodb.net/LabWeb?retryWrites=true&w=majority'
 export uri2 = 'mongodb+srv://user1:9OpZIbnA6BtBen37@pcbuilding.cndjn.mongodb.net/test?retryWrites=true&w=majority'
 export account_sid = 'AC560be1b212ded4a3c424d5b25a0377d8'
-export auth_token = 'cee700878daee4035d90b994916cf4d7'
-export session_id = 'b1e2b915-fcc4-4da0-b46e-46e7f56a3db5'
+export auth_token = '43cf5b85490a041ddf1513d5c1f9d819'
+export session_id = '3a64db4f-52a7-43dc-88cf-f5892e156b5a'
+export ngrok_url = 'http://019352a40895.ngrok.io'
